# mcp_server_redteam

./: README.md
mcp_redteam_poc/: .gitignore  README.md  pyproject.toml
mcp_redteam_poc/.github/workflows/: ci.yml  nightly.yml
mcp_redteam_poc/configs/: mcp_endpoints.json  target_http.json
mcp_redteam_poc/mcp_redteam/: __init__.py  __main__.py  cli.py  config.py  storage.py
mcp_redteam_poc/mcp_redteam/core/: heuristics.py  mcp_client.py  report.py  runner.py  signals.py  transcript.py  transport_base.py  transport_http.py  transport_stdio.py
mcp_redteam_poc/mcp_redteam/judges/: deterministic.py  llm_judge.py
mcp_redteam_poc/mcp_redteam/lab/: __init__.py  fake_metadata.py  vuln_server.py
mcp_redteam_poc/mcp_redteam/mcp/: http_client.py  protocol.py  registry.py
mcp_redteam_poc/mcp_redteam/mcp/servers/: __init__.py  benign.py  demo_agent_server.py  injection_output.py  poisoned_tools.py
mcp_redteam_poc/mcp_redteam/probes/: __init__.py  auth_probe.py  base.py  cmd_injection.py  dos.py  path_traversal.py  prompt_injection.py  schema_confusion.py  ssrf.py
mcp_redteam_poc/mcp_redteam/report/: html.py  junit.py
mcp_redteam_poc/mcp_redteam/report/templates/: report.html.j2  testcase.html.j2
mcp_redteam_poc/mcp_redteam/runner/: harness.py  replay.py  trace.py
mcp_redteam_poc/mcp_redteam/suite/: loader.py  models.py
mcp_redteam_poc/suites/baseline/: suite.yaml
mcp_redteam_poc/suites/exfil/: suite.yaml
mcp_redteam_poc/suites/injections/: suite.yaml
