[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-redteam"
version = "0.2.0"
description = "MCP red teaming harness for MCP-enabled agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MCP Red Team" }]

dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[project.scripts]
mcp-redteam = "mcp_redteam.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_redteam*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
